Diagram Update 2025-08-02.md

--- a/Daily-Logs/2025-08-02.md
+++ b/Daily-Logs/2025-08-02.md
@@ -28,7 +28,7 @@ Today, I successfully executed the first phase of the authentication system over
 
 ## Visual Aid: Prisma Workflow
 
-![Prisma Workflow Diagram](assets/prisma.png)
+![Prisma Workflow Diagram](../assets/prisma.png)
 
 ---
 
